--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-rules</artifactId>
+      <version>1.19.0</version>
+    </dependency>
   </dependencies>
 
   <build>
