--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -31,7 +31,7 @@ jobs:
           # Change reporter level if you need [info,warning,error].
           # GitHub Status Check won't become failure with a warning.
           level: warning
-          workdir: src/test
+          workdir: src/java
  
   build:
     # The type of runner that the job will run on
